using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{   // strings for animator parameter
    internal static string isMoving = "isMoving"; 
    internal static string isRunning = "isRunning";
    internal static string isGround = "isGround";
    internal static string canMove = "canMove";
    internal static string isTrap = "isTrap";
    internal static string dy = "dy"; // y velocity

    internal static string ground_interrupt = "groundInterrupt";
    internal static string air_interrupt = "airInterrupt";

    internal static string isOnWall = "isOnWall";
    internal static string isOnCeil = "isOnCeil";
    // trigger 
    internal static string attack = "attack";
    internal static string jump = "jump";
    internal static string block = "isBlocking";
    internal static string blockk = "fight";

    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";

    internal static string isAim = "isAiming";
}
